# rdascore

./: README.md  pyproject.toml  requirements.txt  setup.py
docs/: packaging.md  scores.markdown
rdafn/: __init__.py  analyze.py  load.py
rdascore/: __init__.py  analyze.py  discrete_compactness.py  load.py  smallestenclosingcircle.py
sample/: NC20C_I000K01N14_vtd_assignments.csv  sample_code.py  sample_script.py
scripts/: debug.py  run_batch.py
test/: debug.py  profile_compactness.py  test_discrete_compactness.py  test_scorecard.py
testdata/: NC20C_random_plan.csv  NC20U_plan_0000.csv  NC_minority_oppty.csv
testutils/: equal.py
