[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rdafn"
version = "1.2.0"
authors = [
  { name="Alec Ramsay", email="a73cram5ay@gmail.com" },
]
description = "Redistricting analytics for scoring ensembles of redistricting plans"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["license", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/dra2020/rdafn"
"Bug Tracker" = "https://github.com/dra2020/rdafn/issues"